--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,55 +1,83 @@
-header#tree{
-    position: fixed;
-    display: flex;
-    background-color: #668f00;
-    width: 100%;
-    justify-content: space-between;
-    padding-top: 10px; 
+.header {
+   display: flex;
+   justify-content: space-between;
+   background-color: #314854;
 }
 
 h1 {
-    font-size: 50px;
+    font-family: 'Geostar', cursive;
+    font-size: 60px;
+    color: antiquewhite;
 }
-
-.header-left {
-    display: flex;
-}
-
-#icon {
+.icon {
     height: 60px;
-    border-radius: 50%;
-    padding: 0 10px;
+    border-radius: 100px;
+    padding-right: 60px;
 }
 
-.menu1 {
-    height: 50px;
-    border-radius: 60%;
-}
 
-.list {
-    list-style: none;
-    display: flex;
-    padding-top: 20px;
-   
-}
-
-a {
-    padding:20px 20px 0 0;
-    color: black;
-    font-size: 20px;
-}
-/*headerここまで*/
-
-.f-container{
-    background-image: url(../img/bao.jpg);
-    background-repeat: no-repeat;
-    background-position: 0px 30px;
-    background-size:contain;
-   height: 0px;
-   padding-top: 80.20%;
-}
 /*mainここまで*/
 
-.inf-left {
-    height: 50px;
+h2 {
+    font-family: 'Geostar', cursive;
+    font-size: 30px;
+    color:#314854;
 }
+
+.container div{
+    background-color: #ccf5ff;
+}
+
+.d-flex{
+    display: flex;
+    justify-content: 
+} 
+a .active{
+    background-color:#e9eaea;
+}
+
+.tab-nav {
+    display: flex;
+  }
+  
+  .tab-nav li {
+    border-right: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+    background-color: #eee;
+
+    list-style: none;
+  }
+  
+  .tab-nav li:first-child {
+    border-left: 1px solid #ddd;
+  }
+  
+  .tab-nav li a {
+    display: block;
+    padding: 5px 10px;
+    color: #777;
+    text-decoration: none;
+  }
+  
+  .tab-nav li a.active {
+    border-bottom: 1px solid #fff;
+    background-color: #fff;
+    margin-bottom: -1px;
+  }
+  
+  
+  .tab-content > .active {
+    display: block;
+  }
+  
+  .tab-content > div {
+    display: none;
+    padding: 15px;
+    height: 100px;
+    line-height: 24px;
+  }
+
+  .footer-copyright {
+      background-color:#314854;
+      color: #ddd;
+  }
